// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Landing/> after the first animation should render correctly 1`] = `
<LearnMoreOverlay>
  <div
    className="container container__loaded"
    onTransitionEnd={[Function]}
  >
    <div
      className="layout"
    >
      <div
        className="information text"
      >
        <h2
          className="title"
        >
          Cookie Policy
        </h2>
        <p>
          This site uses cookies, but you can control these through your browser settings. Most browsers allow you to manage cookies saved on your device – just head to the help section of your browser.
        </p>
        <h3>
          What are cookies?
        </h3>
        <p>
          Cookies are data files that can hold small amounts of info and are stored on your device (computer, smartphone etc) when you visit a website.
        </p>
        <h3>
          What cookies does this site use?
        </h3>
        <ul
          className="listOfCookies"
        >
          <li
            className="cookieDescription"
          >
            This site stores cookie data based on the theme selector if you choose to use it. A cookie is written detailing the theme choice which enables the site to remember your theme selection and preserve that selection when you refresh the page.
          </li>
          <li
            className="cookieDescription"
          >
            This site uses cookies to record that you've acknowledged this cookie policy so that we don't have to show it to you more than we need to.
          </li>
        </ul>
      </div>
      <button
        className="cross cross__loaded"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
</LearnMoreOverlay>
`;

exports[`<Landing/> should render correctly 1`] = `
<LearnMoreOverlay>
  <div
    className="container container__loaded"
    onTransitionEnd={[Function]}
  >
    <div
      className="layout"
    >
      <div
        className="information text"
      >
        <h2
          className="title"
        >
          Cookie Policy
        </h2>
        <p>
          This site uses cookies, but you can control these through your browser settings. Most browsers allow you to manage cookies saved on your device – just head to the help section of your browser.
        </p>
        <h3>
          What are cookies?
        </h3>
        <p>
          Cookies are data files that can hold small amounts of info and are stored on your device (computer, smartphone etc) when you visit a website.
        </p>
        <h3>
          What cookies does this site use?
        </h3>
        <ul
          className="listOfCookies"
        >
          <li
            className="cookieDescription"
          >
            This site stores cookie data based on the theme selector if you choose to use it. A cookie is written detailing the theme choice which enables the site to remember your theme selection and preserve that selection when you refresh the page.
          </li>
          <li
            className="cookieDescription"
          >
            This site uses cookies to record that you've acknowledged this cookie policy so that we don't have to show it to you more than we need to.
          </li>
        </ul>
      </div>
      <button
        className="cross"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
</LearnMoreOverlay>
`;

exports[`<Landing/> when clicking the close button should render correctly 1`] = `
<LearnMoreOverlay>
  <div
    className="container container__closed"
    onTransitionEnd={[Function]}
  >
    <div
      className="layout"
    >
      <div
        className="information text"
      >
        <h2
          className="title"
        >
          Cookie Policy
        </h2>
        <p>
          This site uses cookies, but you can control these through your browser settings. Most browsers allow you to manage cookies saved on your device – just head to the help section of your browser.
        </p>
        <h3>
          What are cookies?
        </h3>
        <p>
          Cookies are data files that can hold small amounts of info and are stored on your device (computer, smartphone etc) when you visit a website.
        </p>
        <h3>
          What cookies does this site use?
        </h3>
        <ul
          className="listOfCookies"
        >
          <li
            className="cookieDescription"
          >
            This site stores cookie data based on the theme selector if you choose to use it. A cookie is written detailing the theme choice which enables the site to remember your theme selection and preserve that selection when you refresh the page.
          </li>
          <li
            className="cookieDescription"
          >
            This site uses cookies to record that you've acknowledged this cookie policy so that we don't have to show it to you more than we need to.
          </li>
        </ul>
      </div>
      <button
        className="cross cross__closed"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
</LearnMoreOverlay>
`;
